flux/bastille/apps/rook-ceph/rook-ceph-cluster/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ceph-dashboard
  annotations:
    external-dns.alpha.kubernetes.io/hostname: &hostname ceph.bastille.chancey.dev
spec:
  hostnames:
    - *hostname
  parentRefs:
    - name: internal
      kind: Gateway
      namespace: kube-system
      sectionName: https-bastille
  rules:
    - backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 8080
